--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
-    color: #f0f0f0;
-    background-color: #f0f0f0;
+    color: #f0f0f0; 
+    background-color: white;
 }
 
 .white {
@@ -11,9 +11,9 @@ html {
 
 .logo {
     position: relative;
-    width: 180px;
+    width: 160px;
     z-index: 100;
-    padding: 30px 30px 30px 30px;
+    padding: 30px;
 }
 
 .dashboard {
@@ -21,7 +21,7 @@ html {
     width: 100%;
     height: 100%;
     background-color: #f0f0f0;
-    border-radius: 30px 30px 0px 0px;
+    border-radius: 40px 0px 0px 0px;
 }
 
 .col-lg {
@@ -29,13 +29,17 @@ html {
     width: 100%;
     margin: 15px;
     height: 100%;
-    border-radius: 20px;
+    border-radius: 25px;
     padding: 0px 0px !important;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.01), 0 4px 4px rgba(0, 0, 0, 0.01),
-        0 8px 8px rgba(0, 0, 0, 0.01), 0 18px 18px rgba(0, 0, 0, 0.02),
-        0 28px 28px rgba(0, 0, 0, 0.03), 0 38px 38px rgba(0, 0, 0, 0.04);
+    box-shadow: 
+        0 2px 2px rgba(0, 0, 0, 0.01), 
+        0 4px 4px rgba(0, 0, 0, 0.01),
+        0 8px 8px rgba(0, 0, 0, 0.02), 
+        0 18px 18px rgba(0, 0, 0, 0.02),
+        0 28px 28px rgba(0, 0, 0, 0.03), 
+        0 38px 38px rgba(0, 0, 0, 0.03);
 }
 .tableauPlaceholder {
-    border-radius: 20px;
+    border-radius: 25px;
     padding: 0;
 }
