--- a/loading.css
+++ b/loading.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100vh;
     opacity: 1;
-    background-color: white;
+    background-color: #FFFDF5;
     z-index: 10000;
     position: fixed;
     top: 0;
@@ -43,5 +43,4 @@
   100% {
     transform: scale(1.1);
   }
-}
 }
