--- a/style.css
+++ b/style.css
@@ -1,45 +1,113 @@
-html {
-    color: #f0f0f0; 
-    background-color: white;
-}
-
-.white {
-    background-color: bla;
-    height: 100%;
-    width: 100vw;
-}
-
-.logo {
-    position: relative;
-    width: 160px;
-    z-index: 100;
-    padding: 30px;
+body {
+    color: #333333;
+    text-align: left;
+    background-color: #FFFDF5;
 }
 
 .dashboard {
-    padding: 15px 30px;
-    width: 100%;
-    height: 100%;
-    background-color: #f0f0f0;
-    border-radius: 40px 0px 0px 0px;
+    height: 90vh;
+    width: 70%;
 }
 
-.col-lg {
-    background-color: white;
-    width: 100%;
-    margin: 15px;
-    height: 100%;
-    border-radius: 25px;
-    padding: 0px 0px !important;
-    box-shadow: 
-        0 2px 2px rgba(0, 0, 0, 0.01), 
-        0 4px 4px rgba(0, 0, 0, 0.01),
-        0 8px 8px rgba(0, 0, 0, 0.02), 
-        0 18px 18px rgba(0, 0, 0, 0.02),
-        0 28px 28px rgba(0, 0, 0, 0.03), 
-        0 38px 38px rgba(0, 0, 0, 0.03);
+.navigazione {
+    height: 90vh;
+    width: 30%;
 }
-.tableauPlaceholder {
-    border-radius: 25px;
-    padding: 0;
+
+h1 {
+    font-family: Georgia, serif;
+    font-weight: bold;
+    font-size: 32px;
+}
+
+h2 {
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 10px;
+    letter-spacing: 1.5px;
+    font-weight: bolder;
+}
+
+h3 {
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    font-weight: 100;
+}
+
+.logo {
+    display: flex;
+}
+
+.container-site {
+    margin: 32px 48px;
+}
+
+.navigazione {
+    padding-right: 70px;
+}
+
+.freccie {
+    width: 35px;
+    display: inline-flex;
+    justify-content: space-between;
+    margin: 0 10px 10px 10px;
+    cursor: pointer;
+}
+
+.dx {
+    right: 0;
+    position: relative;
+}
+
+.bottone-on {
+    color: #FFFDF5;
+    background-color: #333;
+    border-radius: 30px 30px 0 0;
+    padding: 18px 24px 12px 24px;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0px 3px 15px rgba(51, 51, 51, 0.15);
+    display: flex;
+    justify-content: space-between;
+}
+
+.panel {
+    color: #333333;
+    background-color: #FFFDF5;
+    border-radius: 0 0 30px 30px;
+    padding: 18px 24px 12px 24px;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0px 3px 15px rgba(51, 51, 51, 0.15);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+}
+
+.bottone-off {
+    color: #333333;
+    background-color: #FFFDF5;
+    border-radius: 30px;
+    padding: 18px 24px 12px 24px;
+    cursor: pointer;
+    font-weight: bold;
+    box-shadow: 0px 3px 15px rgba(51, 51, 51, 0.15);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+}
+
+.freccie-bottoni {
+    width: 12px;
+    margin-top: -5px;
+}
+
+.legenda {
+    width: 100%;
+    display: inline;
+}
+
+.logo-hdm {
+    width: 100px;
+    padding-top: 50px;
 }
