--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ h3 {
     margin-top: -5px;
 }
 
+.testo-bottoni {
+    padding-right: 24px;
+}
+
 .legenda {
     width: 100%;
     padding-top: 16px;
