--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@ body {
 
 .dashboard {
     width: 70%;
+    height: 90vh;
 }
 
 .navigazione {
     width: 30%;
     padding: 0px 48px 24px 24px;
+    height: 90vh;
 }
 
 h1 {
@@ -31,7 +33,7 @@ h3 {
     font-size: 12px;
     letter-spacing: 0.5px;
     font-weight: 100;
-    line-height: 1.3;
+    line-height: 1.4;
 }
 
 .logo {
@@ -117,6 +119,11 @@ h3 {
 .legenda {
     width: 100%;
     padding-top: 16px;
+    font-family: 'Trebuchet MS', sans-serif;
+    font-size: 12px;
+    letter-spacing: 0.5px;
+    font-weight: 100;
+    line-height: 1.5;
 }
 
 .logo-hdm-mobile {
@@ -146,6 +153,18 @@ a {
 .dx,
 .sx {
     transition-duration: 0.5s;
+}
+
+.fonti {
+    color: #333333;
+    font-weight: bold;
+    text-decoration: underline;
+    transition-duration: 0.5s;
+}
+
+.fonti:hover {
+    color: #333333;
+    opacity: 0.6;
 }
 
 @media (max-width: 1500px) {
