--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,11 @@ body {
         margin-top: -4px;
     }
     .icon {
-        height: 22px;
-        margin-left: 4px;
+        height: 20px;
+        margin-left: 0px;
+    }
+    .logo-wired {
+        width: 80px;
+        height: auto;
     }
 }
