--- a/css/style.css
+++ b/css/style.css
@@ -47,20 +47,20 @@
 /*FONTS*/
 
 .titolo {
-    font-family: Georgia, serif;
+    font-family: 'Georgia', 'Times', serif;
     font-weight: bold;
     font-size: 32px;
 }
 
 .sottotitolo {
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', 'Arial', sans-serif;
     font-size: 10px;
     letter-spacing: 1.5px;
     font-weight: bold;
 }
 
 .corpo {
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', 'Arial', sans-serif;
     font-size: 12px;
     letter-spacing: 0.5px;
     font-weight: 100;
