--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,11 @@ body {
     height: 24px;
     margin-left: 6px;
     cursor: pointer;
+    transition-duration: 0.5s;
+}
+
+.icon:hover {
+    opacity: 0.7;
 }
 
 .it {
