--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,6 @@ body {
     border-radius: 0 0 30px 30px;
     padding: 18px 24px 18px 24px;
     box-shadow: 0px 3px 15px rgba(51, 51, 51, 0.15);
-    display: flex;
     margin-bottom: 24px;
 }
 
@@ -210,6 +209,70 @@ body {
 
 .rombi {
     width: 30px;
+}
+
+
+/*POPUP*/
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 100000;
+}
+
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 70px auto;
+    padding: 20px;
+    width: 30%;
+    position: relative;
+    transition: all 5s ease-in-out;
+    color: #333333;
+    background-color: #F5F4F4;
+    border-radius: 30px;
+    box-shadow: 0px 3px 15px rgba(51, 51, 51, 0.15);
+}
+
+.popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 25px;
+    font-weight: 100;
+    text-decoration: none;
+    color: #333;
+    z-index: 1000000;
+    opacity: 1;
+}
+
+.popup .close:hover {
+    opacity: 0.6;
+}
+
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
+}
+
+@media screen and (max-width: 700px) {
+    .box {
+        width: 70%;
+    }
+    .popup {
+        width: 70%;
+    }
 }
 
 
